first pass at templatizing
